# opentelemetry-exporter-python

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  README.rst  THIRD_PARTY_NOTICES.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: repolinter.yml  tests.yml
_modules/: index.html
_modules/opentelemetry_ext_newrelic/: span.html
_sources/: quickstart.rst.txt
docs/: api.rst  conf.py  index.rst  quickstart.rst
src/opentelemetry_ext_newrelic/: __init__.py  span.py
tests/: conftest.py  test_span.py
