[metadata]
description = New Relic OpenTelemetry Exporter
long_description = file: README.rst
long_description_content_type = text/x-rst
author = New Relic
author_email = open-source@newrelic.com
url = https://github.com/newrelic/opentelemetry-exporter-python
platforms = any
license = Apache-2.0
license_files =
    LICENSE
    THIRD_PARTY_NOTICES.rst
classifiers =
    Development Status :: 3 - Alpha
    Topic :: System :: Monitoring
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
setup_requires =
    setuptools_scm
python_requires = >=3.5,<3.9
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-modules --strict -v
testpaths = src tests
markers =
    http_response: Inject a custom http response for all http requests

[flake8]
max-line-length = 88
ignore = W503,E203

[coverage:run]
branch = True
source = opentelemetry_ext_newrelic

[tool:isort]
src_paths=src,tests
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_third_party =
    pytest
